# open-golf-coach

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  python-publish.yml
bindings/cpp/: CMakeLists.txt  README.md  opengolfcoach.h
bindings/nodejs/: index.d.ts  index.js  package.json
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/unity/: OpenGolfCoach.cs  README.md
bindings/unreal/: OpenGolfCoach.cpp  OpenGolfCoach.h  README.md
core/: Cargo.toml
core/shot_classification/: rank_colors.toml
core/src/: shot_classifier.rs
examples/cpp/: CMakeLists.txt  README.md  example.cpp
examples/nodejs/: README.md  example.js
examples/python/: README.md  example.py
examples/unity/: GolfShotExample.cs  README.md
examples/unreal/: GolfShotComponent.cpp  GolfShotComponent.h  README.md
locales/definitions/: definitions_en.toml
locales/shots/: shots_en.toml
server/: Cargo.toml  NOVA_BRIDGE.md  README.md
server/src/: client.rs  lib.rs  main.rs  nova.rs  nova_config.rs
windows-demo/: .gitignore  BUILD_SUCCESS.md  Cargo.toml  OPENAPI_INTEGRATION.md  QUICKSTART.md  README.md  build-windows.bat  build-windows.sh  test_client.py  test_openapi_client.py
windows-demo/src/: main.rs
