[package]
name = "opengolfcoach-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "opengolfcoach"
crate-type = ["cdylib"]

[dependencies]
opengolfcoach = { path = "../../core" }
pyo3 = { version = "0.27", features = ["extension-module", "generate-import-lib"] }
serde_json = "1.0"
