[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "opengolfcoach"
version = "0.1.0"
description = "Cross-platform library for calculating derived golf shot values"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
keywords = ["golf", "analytics", "ballistics", "sports"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/OpenLaunchLabs/open-golf-coach"
Repository = "https://github.com/OpenLaunchLabs/open-golf-coach"

[tool.maturin]
features = ["pyo3/extension-module"]
